--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"
     />
-    <title>Routes optimization</title>
+    <title>EcoSales</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
